vpc.tf
resource "aws_vpc" "myvpc" {
  cidr_block = "${var.cidr_range}"

  tags = {
    Name = "vpc"
  }
}

resource "aws_internet_gateway" "myigw" {
  vpc_id = aws_vpc.myvpc.id

  tags = {
    Name = "igw"
  }
}

resource "aws_subnet" "private" {
  vpc_id = aws_vpc.myvpc.id
  count      = "${length(var.private_cidr)}"
  cidr_block = "${var.private_cidr[count.index]}"

  tags = {
    Name = "private_subnet[count.index]"
  }
}

resource "aws_subnet" "public" {
  vpc_id = aws_vpc.myvpc.id
  count      = "${length(var.public_cidr)}"
  cidr_block = "${var.public_cidr[count.index]}"
  map_public_ip_on_launch = true

  tags = {
    Name = "public_subnet"
  }
}

resource "aws_eip" "myeip" {
  vpc = true

  tags = {
    Name = "eip"
  }
}

resource "aws_nat_gateway" "mynat" {
  allocation_id = aws_eip.myeip.id
  subnet_id = aws_subnet.public.id

  tags = {
    Name = "natgw"
  }
}

resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.myvpc.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.mynat.id
  }

  tags = {
    Name = "private_route_table"
  }
}

resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.myvpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.myigw.id
  }

  tags = {
    Name = "public_route_table"
  }
}

resource "aws_route_table_association" "private" {
  subnet_id = aws_subnet.private.id
  route_table_id = aws_route_table.private_route_table.id

}

resource "aws_route_table_association" "public" {
  subnet_id = aws_subnet.public.id
  route_table_id = aws_route_table.public_route_table.id
}
